--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
 Tests: phpunit
 Restrictions: needs-recommends
-Depends: @, php5-cli, php-horde-test
+Depends: @, php5-cli, php-horde-test, php5-sqlite
