--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Mathieu Parent <sathieu@debian.org>
 Build-Depends: debhelper (>= 9), pkg-php-tools, pear-horde-channel, php-horde-role
 Standards-Version: 3.9.7
 Homepage: http://www.horde.org/
-Vcs-Git: git://anonscm.debian.org/pkg-horde/PEAR/php-horde-kronolith.git
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-horde/PEAR/php-horde-kronolith.git
+Vcs-git: https://anonscm.debian.org/git/pkg-horde/PEAR/php-horde-kronolith.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-horde/PEAR/php-horde-kronolith.git
 
 Package: php-horde-kronolith
 Architecture: all
