Replace php5-* by php-* in d/tests/control

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
 Tests: phpunit
 Restrictions: needs-recommends
-Depends: @, php5-cli, php-horde-test, php5-sqlite
+Depends: @, php-cli, php-horde-test, php-sqlite
