Fix debian/tests/control: php-sqlite -> php-sqlite3

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
 Tests: phpunit
 Restrictions: needs-recommends
-Depends: @, php-cli, php-horde-test, php-sqlite
+Depends: @, php-cli, php-horde-test, php-sqlite3
