--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Horde Maintainers <team+debian-horde-team@tracker.debian.org>
 Uploaders:
  Juri Grabowski <debian@jugra.de>,
  Mike Gabriel <sunweaver@debian.org>,
-Build-Depends: pkg-php-tools, pear-horde-channel, php-horde-role, debhelper-compat (= 13)
+Build-Depends: pkg-php-tools, pear-channels, php-horde-role, debhelper-compat (= 13)
 Standards-Version: 4.6.2
 Rules-Requires-Root: no
 Homepage: http://www.horde.org/
